WebCore/svg/SVGColor.cpp
@@ -77,10 +77,7 @@ void SVGColor::setRGBColor(const String& rgbColor, ExceptionCode& ec)
 Color SVGColor::colorFromRGBColorString(const String& colorString)
 {
     String s = colorString.stripWhiteSpace();
-    // hsl, hsla and rgba are not in the SVG spec.
     // FIXME: rework css parser so it is more svg aware
-    if (s.startsWith("hsl") || s.startsWith("rgba"))
-        return Color();
     RGBA32 color;
     if (CSSParser::parseColor(color, s))
         return color;
